Auto-add data-toggle = tab for any <a> whose ID starts with "tab-"
This way, you wouldn't have to write toggle : tab in the YML
for every tab. The fact that the name includes tab should be enough

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -22,14 +22,20 @@ lnk-existing-quiz :
   wide : 
     show : wide-X 
 
+lnk-edit-qz :
+  autoclick :
+    tab : tab-editqz-1
+  left :
+    show : left-7
+  wide :
+    show : wide-X
+
 tab-wsb-quizzes :
-  toggle : tab
   url : quizzes/list
   panel :
     url : quiz/preview?id=:id
 
 tab-wsb-sektions :
-  toggle : tab
     
 lnk-wsb-new :
   notouch : true
@@ -43,14 +49,12 @@ lnk-wsb-existing :
     tab : tab-wsb-existing
 
 tab-wsb-existing :
-  toggle : tab 
   url : quiz/testpapers.json?id=:prev
   prev : tab-wsb-quizzes
   panel :
     url : testpaper/load?id=:id
 
 tab-wsl-quizzes :
-  toggle : tab
   autoclick :
     link : lnk-existing-quiz
 
@@ -85,19 +89,15 @@ lnk-wb-pending :
     tab : tab-grd-ws
 
 tab-qzb-courses : 
-  toggle : tab
   url : teacher/courses
   autoclick :
     tab : tab-qzb-topics
 
 tab-qzb-verticals :
-  toggle : tab
 
 tab-qzb-topics : 
-  toggle : tab
 
 tab-qzb-questions :
-  toggle : tab
 
 m-teacher-quizzes :
   toggle : dropdown 
@@ -125,33 +125,28 @@ lnk-howto-1 : &type-notouch
 lnk-howto-2 : *type-notouch
 
 tab-ws-performance :
-  toggle : tab
   panel : 
     url : student/performance.json?id=:id&ws=:prev 
   url : performance/ws.json?id=:prev 
   prev : tab-wsl
 
 tab-grd-ws :
-  toggle : tab
   url : ws/pending
   autoclick :
     tab : tab-grd-page
 
 tab-grd-page :
-  toggle : tab
   prev : tab-grd-ws
   url : pages/pending.json?id=:prev
   autoclick :
     tab : tab-grd-panel
 
 tab-grd-panel :
-  toggle : tab
   prev : tab-grd-page
   id : tab-grd-ws
   url : gr/pending.json?page=:prev&ws=:id
 
 tab-tc-rc-1 :
-  toggle : tab
   url : ws/list
   panel :
     url : ws/summary.json?id=:id
@@ -159,7 +154,6 @@ tab-tc-rc-1 :
     tab : tab-tc-rc-2
 
 tab-tc-rc-2 :
-  toggle : tab
   panel :
     url : ws/layout.json?ws=:prev&id=:id
   prev : tab-tc-rc-1
@@ -169,7 +163,6 @@ tab-tc-rc-2 :
     tab : tab-tc-rc-3
 
 tab-tc-rc-3 :
-  toggle : tab
   wide :
     show : wide-X
 
@@ -200,7 +193,6 @@ lnk-rc-deepdive :
     tab : tab-dive-1
 
 tab-dive-1 :
-  toggle : tab
   url : teacher/sektions
   panel : 
     url : sektion/students.json?id=:id&context=deepdive
@@ -208,13 +200,11 @@ tab-dive-1 :
     tab : tab-dive-2
 
 tab-dive-2 :
-  toggle : tab
   prev : tab-dive-1
   wide :
     show : wide-chart-2
 
 tab-dive-3 : 
-  toggle : tab
   prev : tab-dive-1
   panel :
     url : overall/proficiency.json?id=:id
@@ -222,7 +212,6 @@ tab-dive-3 :
     show : wide-chart-3
 
 deepdive-* : 
-  toggle : tab
   url : vertical/topics?id=:id
   panel :
     url : sektion/proficiency?of=:prev&in=:id
@@ -250,7 +239,6 @@ lnk-st-inbox :
     show : wide-wait
 
 tab-st-rc-1 :
-  toggle : tab
   url : ws/list 
   panel :
     url : ws/layout.json?ws=:id&id=:prev
@@ -259,18 +247,15 @@ tab-st-rc-1 :
     tab : tab-st-rc-2
 
 tab-st-rc-2 :
-  toggle : tab
   prev : tab-st-rc-1
 
 tab-st-inbox :
-  toggle : tab
   url : inbox.json?id=:prev
   prev : control-panel
   panel :
     url : inbox/echo.json?ws=:id
 
 tab-st-outbox :
-  toggle : tab
   url : outbox
 
 lnk-inbox-download :
@@ -317,19 +302,14 @@ m-examiner-wb :
   menu : examiner-wb
 
 tab-new-school :
-  toggle : tab
 
 tab-selected-school :
-  toggle : tab
 
 tab-school-general :
-  toggle : tab
 
 tab-school-faculty :
-  toggle : tab
 
 tab-school-sektions :
-  toggle : tab
 
 lnk-wb-tagging :
   left :
@@ -340,7 +320,6 @@ lnk-wb-tagging :
     tab : tab-tag-pending
 
 tab-tag-pending :
-  toggle : tab 
   url : untagged/list
   panel :
     url : question/preview.json?id=:id
@@ -348,10 +327,8 @@ tab-tag-pending :
     tab : tab-tag-topic
 
 tab-tag-topic :
-  toggle : tab 
 
 tab-tag-misc :
-  toggle : tab 
 
 lnk-wb-typeset :
   left :
@@ -362,7 +339,6 @@ lnk-wb-typeset :
     tab : tab-typeset-new
 
 tab-typeset-new :
-  toggle : tab
   url : typeset/new
   panel :
     url : suggestion/preview.json?id=:id
@@ -376,7 +352,6 @@ m-block-slots :
   toggle : dropdown
 
 tab-typeset-ongoing :
-  toggle : tab
   url : typeset/ongoing
   panel :
     url : suggestion/preview.json?id=:id
@@ -386,16 +361,12 @@ tab-typeset-ongoing :
 ##############################################################################
 
 tab-honest :
-  toggle : tab
 
 tab-cogent :
-  toggle : tab
 
 tab-complete :
-  toggle : tab
 
 tab-other :
-  toggle : tab
 
 ##############################################################################
 ## Shared between ** all ** roles  
