--- a/test/fixtures/students.yml
+++ b/test/fixtures/students.yml
@@ -10,6 +10,7 @@
 #  created_at  :datetime
 #  updated_at  :datetime
 #  klass       :integer
+#  atm_key     :string(20)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
