Major Purge !! Dropped course, syllabi, specialization and board tables
Also, one step away from making the School table redundant.
Sektions are now tied to the teacher and not the school

retaining only the minimal structure that makes sense to everyone.
Old tables were too specific for the Indian school market context

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -80,7 +80,7 @@ lnk-suggestion-form :
 
 lnk-new-quiz :
   autoclick : 
-    tab : tab-qzb-courses
+    tab : tab-qzb-1
   left :
     show : left-2
   wide :
@@ -93,17 +93,6 @@ lnk-wb-pending :
     show : wide-grd-canvas
   autoclick :
     tab : tab-grd-ws
-
-tab-qzb-courses : 
-  url : teacher/courses
-  autoclick :
-    tab : tab-qzb-topics
-
-tab-qzb-verticals :
-
-tab-qzb-topics : 
-
-tab-qzb-questions :
 
 m-teacher-quizzes :
   toggle : dropdown 
