--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -265,6 +265,10 @@ lnk-inbox-download :
   ajax: disabled
   update-on : inbox/echo
 
+m-enroll-self : 
+  toggle : dropdown 
+  menu : enrollment-form
+
 ##############################################################################
 ## Admin Only 
 ##############################################################################
