Asking for country and zip-code info on teacher registration

--- a/test/fixtures/teachers.yml
+++ b/test/fixtures/teachers.yml
@@ -8,6 +8,8 @@
 #  created_at :datetime
 #  updated_at :datetime
 #  school_id  :integer
+#  country_id :integer
+#  zip_code   :string(10)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
