--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -78,6 +78,10 @@ lnk-suggestion-form :
   notouch : true
   ajax : disabled
 
+lnk-upload-suggestion :
+  toggle : modal
+  notouch : true
+
 lnk-new-quiz :
   autoclick : 
     tab : tab-qzb-courses
