[Huge]: Rudimentary scaffolding for walk-thru/joyride support
tutorials need to be written still

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -219,6 +219,9 @@ tab-mng-sektions-1 :
   panel : 
     url : ping/sektion?id=:id
 
+help-* :
+  notouch : true
+
 ##############################################################################
 ## Students 
 ##############################################################################
