--- a/test/fixtures/suggestions.yml
+++ b/test/fixtures/suggestions.yml
@@ -9,6 +9,7 @@
 #  created_at  :datetime
 #  updated_at  :datetime
 #  signature   :string(15)
+#  pages       :integer         default(1)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
