[student]: Self-enrollment form now in modal instead of dropdown
Also standardized classes for modals
  1. regular
  2. wide
  3. slim

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -272,9 +272,9 @@ lnk-inbox-download :
   ajax: disabled
   update-on : inbox/echo
 
-m-enroll-self : 
-  toggle : dropdown 
-  menu : enrollment-form
+lnk-enroll-self : 
+  toggle : modal 
+  notouch : true
 
 ##############################################################################
 ## Admin Only 
