[student console]: Non-responsive 'Quizzes' tab issue fixed
Issue arises due to 'data-prev' set on 'tab-st-rc-1'.
Solution: Change ws/layout to work with params[:id] - if provided - else
assume that layout sought for currently logged in student

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -250,8 +250,7 @@ lnk-st-inbox :
 tab-st-rc-1 :
   url : ws/list 
   panel :
-    url : ws/layout.json?ws=:id&id=:prev
-  prev : control-panel
+    url : ws/layout.json?ws=:id
   autoclick :
     tab : tab-st-rc-2
 
