[Quiz]: Replaced uid column with the more specific job_id column
Latter stores the job-id for buildQuiz. If a quiz fails to compile, then
the quiz itself is destroyed

'uid' used to point to some path in the 'atm' - which has now been done
away with

--- a/test/fixtures/quizzes.yml
+++ b/test/fixtures/quizzes.yml
@@ -9,10 +9,10 @@
 #  num_questions :integer
 #  name          :string(70)
 #  subject_id    :integer
-#  uid           :string(20)
 #  total         :integer
 #  span          :integer
 #  parent_id     :integer
+#  job_id        :integer         default(-1)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
