--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -93,23 +93,18 @@ lnk-wb-pending :
     tab : tab-grd-ws
 
 m-teacher-quizzes :
-  toggle : dropdown 
   menu : teacher-quiz
 
 m-teacher-workbench : 
-  toggle : dropdown
   menu : teacher-workbench
 
 m-report-cards :
-  toggle : dropdown
   menu : teacher-rc
 
 m-account :
-  toggle : dropdown
   menu : tasks-on-account
 
 m-howto : 
-  toggle : dropdown
   menu : howto-guides
 
 lnk-howto-1 : &type-notouch
@@ -288,11 +283,12 @@ lnk-enroll-self :
 ##############################################################################
 
 m-admin-wb :
-  toggle : dropdown 
   menu : admin-wb
 
+m-admin-console :
+  menu : admin-console
+
 m-admin-schools :
-  toggle : dropdown 
   menu : admin-schools 
 
 lnk-wb-receive :
@@ -325,7 +321,6 @@ lnk-wb-blockdb :
   id : control-panel
 
 m-examiner-wb :
-  toggle : dropdown 
   menu : examiner-wb
 
 tab-new-school :
@@ -376,7 +371,6 @@ lnk-block-* :
 
 m-block-slots :
   menu : blockdb-slots
-  toggle : dropdown
 
 tab-typeset-ongoing :
   url : typeset/ongoing
@@ -404,7 +398,6 @@ lnk-logout :
 
 m-downloads : 
   menu : user-downloads
-  toggle : dropdown
 
 lnk-register :
   toggle : modal
@@ -418,5 +411,4 @@ lnk-register-teacher :
 
 m-notifications :
   menu : notifications
-  toggle : dropdown
 
