[teacher]: Initial framework for favouriting a question
Option to favourite shown in dropdown menu.
This menu could have other options - like report an issue w/ a question

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -225,6 +225,10 @@ tab-mng-sektions-1 :
 help-* :
   notouch : true
 
+lnk-like-question : 
+  notouch : true
+  update-on : question/preview
+
 ##############################################################################
 ## Students 
 ##############################################################################
