[#42] Added ability for a logged in teacher to send ask a question ...
.. if existing tutorials don't answer it

This same capability should be made available to other users too.
Also, in case the user is not logged in, then ask for their e-mail address

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -229,6 +229,10 @@ lnk-like-question :
   notouch : true
   update-on : question/preview
 
+lnk-ask-a-question :
+  toggle : modal 
+  notouch : true
+
 ##############################################################################
 ## Students 
 ##############################################################################
