[big one]: First draft of QuickTrial for teachers ...
Right now, QuickTrial can be invoked from within a teacher's console only.
It could be brought out and then it would first auto-register a teacher and then
begin the quick trial

To-Do: Add the upload PDF functionality

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -233,6 +233,10 @@ lnk-ask-a-question :
   toggle : modal 
   notouch : true
 
+lnk-demo :
+  toggle : modal 
+  notouch : true
+
 ##############################################################################
 ## Students 
 ##############################################################################
