[#82]: Temp commit so that changes made for #99 can be merged and uploaded

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -396,6 +396,8 @@ lnk-wb-resolve :
 
 tab-resolution-pending :
   url : pages/unresolved
+  panel : 
+    url : unresolved/preview?id=:id
 
 ##############################################################################
 ## Shared between Teachers, Examiners and Admin
