--- a/config/gutenberg.yml
+++ b/config/gutenberg.yml
@@ -8,6 +8,7 @@ operations : &tasks
   generate_student_roster : http://gutenberg/blocs/generateStudentRoster
   rotate_scan : http://gutenberg/blocs/rotateScan
   fetch_unresolved_scans : http://gutenberg/blocs/fetchUnresolvedScans
+  resolve_scan : http://gutenberg/blocs/resolveScan
 
 development : &non_production_settings
   axis2 : http://localhost:8080/axis2/services/documentMaster
