--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -433,3 +433,11 @@ m-notifications :
 lnk-upload :
   notouch : true
   toggle : modal
+
+##############################################################################
+## Landing page  
+##############################################################################
+
+m-about : 
+  menu : abouts 
+
