[#113]: First draft of new interface for seeing ongoing suggestions ...
Each ongoing suggestion is identified by the date on which it was received.
Use this to prioritize typsetting

On opening a suggestion, one can see the slots blocked for it.
Slots that have been tagged are enabled and can be clicked to see question preview.
Untagged slots are disabled

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -384,7 +384,7 @@ m-block-slots :
 tab-typeset-ongoing :
   url : typeset/ongoing
   panel :
-    url : suggestion/preview.json?id=:id
+    url : question/preview.json?id=:id
 
 lnk-wb-resolve :
   left :
