[examiner-console]: Corrected specificcation for default link in YAML and HAML

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -98,6 +98,7 @@ lnk-new-quiz :
     wide : wide-wait
 
 lnk-wb-pending : 
+  default : true
   show : 
     left : left-4
     wide : wide-grd-canvas
