--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -426,6 +426,26 @@ lnk-wb-resolve :
   autoclick : 
     tab : tab-resolution-pending
 
+lnk-wb-audit :
+  show : 
+    left : left-7
+    wide : wide-X
+  autoclick : 
+    tab : tab-audit-review
+
+lnk-audit-form : 
+  show : 
+    modal : m-audit-form
+
+tab-audit-review : 
+  url : 
+    self : audit/pending
+    panel : question/preview.json?id=:id
+
+tab-audit-close : 
+  url : 
+    panel : question/preview.json?id=:id
+
 tab-resolution-pending :
   url : 
     self : pages/unresolved
