--- a/test/fixtures/questions.yml
+++ b/test/fixtures/questions.yml
@@ -15,8 +15,9 @@
 #  length          :float
 #  answer_key_span :integer
 #  calculation_aid :integer         default(0)
-#  audited         :boolean         default(FALSE)
-#  audited_by      :integer
+#  auditor         :integer
+#  audited_on      :datetime
+#  available       :boolean         default(TRUE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
