[qzb-filters]: Re-implemented how filters work during quiz building ...
The new scheme relies on class attributes being set on .single-lines
and a [filter] attribute set somewhere up the hierarchy

Currently there are 3 filters - for favourites, selected and show-all.

KPNS: Basis for showing selected questions is wrong

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -278,6 +278,10 @@ lnk-audit-question :
   show : 
     modal : m-audit-form
 
+lnk-qzb-filter : 
+  show : 
+    menu : qzb-filter
+
 ##############################################################################
 ## Students 
 ##############################################################################
