[Temp commit]: Changes for classifying worksheets
This is a stop-gap commit. Do NOT revert back it.
To close this feature, changes would need to be made to printing-press/
and to Java code. The directory and code structure there is limiting
 and what we need now is an elagant structure

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -177,6 +177,10 @@ lnk-tc-rc :
   autoclick :
     tab : tab-tc-rc-1
 
+lnk-build-ws :
+  show : 
+    modal : m-ws-options
+
 lnk-ws-publish :
   url : 
     self : ws/publish.json?id=:id
