--- a/test/fixtures/testpapers.yml
+++ b/test/fixtures/testpapers.yml
@@ -8,9 +8,10 @@
 #  created_at  :datetime
 #  updated_at  :datetime
 #  publishable :boolean         default(FALSE)
-#  exclusive   :boolean         default(TRUE)
-#  inboxed     :boolean         default(FALSE)
+#  takehome    :boolean         default(FALSE)
 #  job_id      :integer         default(-1)
+#  duration    :integer
+#  deadline    :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
