--- a/test/fixtures/videos.yml
+++ b/test/fixtures/videos.yml
@@ -2,15 +2,16 @@
 #
 # Table name: videos
 #
-#  id            :integer         not null, primary key
-#  url           :text
-#  restricted    :boolean         default(TRUE)
-#  instructional :boolean         default(FALSE)
-#  created_at    :datetime
-#  updated_at    :datetime
-#  title         :string(70)
-#  active        :boolean         default(FALSE)
-#  index         :integer         default(-1)
+#  id         :integer         not null, primary key
+#  url        :text
+#  tutorial   :boolean         default(TRUE)
+#  created_at :datetime
+#  updated_at :datetime
+#  title      :string(70)
+#  active     :boolean         default(FALSE)
+#  index      :integer         default(-1)
+#  history    :boolean         default(FALSE)
+#  lecture    :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
@@ -24,3 +25,4 @@ two:
   url: MyString
   restricted: false
   instructional: false
+
