Added price to courses. All prices in USD

--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -7,6 +7,7 @@
 #  teacher_id :integer
 #  created_at :datetime
 #  updated_at :datetime
+#  price      :decimal(5, 2)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
