--- a/test/fixtures/teachers.yml
+++ b/test/fixtures/teachers.yml
@@ -8,6 +8,7 @@
 #  created_at :datetime
 #  updated_at :datetime
 #  school_id  :integer
+#  online     :boolean         default(FALSE)
 #
 
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
