--- a/test/fixtures/videos.yml
+++ b/test/fixtures/videos.yml
@@ -14,6 +14,7 @@
 #  lecture        :boolean         default(FALSE)
 #  watchable_id   :integer
 #  watchable_type :string(20)
+#  description    :text
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
