[Online instructor]: Ability to define a video lesson added

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -31,9 +31,13 @@ lnk-courses :
   show :
     menu : m-courses
 
-course-add-new : 
+new-course :
   show : 
     modal : m-new-course
+
+new-lesson : 
+  show : 
+    modal : m-new-lesson
 
 lnk-edit-account :
   show : 
