Placeholders added in Video for SublimeVideo integration ...
sublime_uid and sublime_title are both used for tracking video usage.
Its a paid service that we are not using now. But who know, going forward, we might

That aside, the two new sublime_* columns also go into making the <a> and <video>
elements that we will need

--- a/test/fixtures/videos.yml
+++ b/test/fixtures/videos.yml
@@ -3,12 +3,13 @@
 # Table name: videos
 #
 #  id             :integer         not null, primary key
-#  html           :text
 #  created_at     :datetime
 #  updated_at     :datetime
 #  active         :boolean         default(FALSE)
 #  watchable_id   :integer
 #  watchable_type :string(20)
+#  sublime_uid    :string(20)
+#  sublime_title  :string(70)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
