Rationalized handling of videos ...
Videos are now rendered as single-lines .. And they can have
contextual menus like single-lines do.

Important changes made in core/trigger.js.coffee to handle clicks
on menu items in .single-line > .menu

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -10,6 +10,7 @@
 #      modal : 
 #      menu :
 #      help : 
+#      video : true / false 
 #    autoclick : 
 #      tab : 
 #      link :
@@ -356,6 +357,14 @@ lnk-inbox-download :
 lnk-enroll-self : 
   show : 
     modal : m-enroll-self
+
+lnk-attach-asset : 
+  show : 
+    modal : mng-assets
+
+lnk-play-video :
+  show : 
+    video : true
 
 ##############################################################################
 ## Admin Only 
