[examiner]: Added ability to attach a video solution to a question ...
The question must be tagged. The video UID required is as given by SublimeVideo

--- a/config/onclick.yml
+++ b/config/onclick.yml
@@ -511,6 +511,10 @@ tab-resolution-pending :
 lnk-rotate-sg :
   update-on : suggestion/preview 
 
+btn-upload-video-solution : 
+  show : 
+    modal : m-upload-video-solution
+
 ##############################################################################
 ## Shared between Teachers, Examiners and Admin
 ##############################################################################
